--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -64,6 +64,13 @@ jobs:
       run: |
         choco install ffmpeg
 
+    - name: Freeze Numpy (hotfix)
+      if: matrix.requires == 'latest'
+      run: |
+        pip install -q "numpy==1.21.0" # temp fix for cypesq
+        # import of PILLOW_VERSION which they recently removed in v9.0 in favor of __version__
+        pip install -q "Pillow<9.0"  # It messes with torchvision
+
     - uses: ./.github/actions/caching
       with:
         os: ${{ runner.os }}
@@ -74,13 +81,6 @@ jobs:
       run: |
         pip --version
         pip install --requirement requirements.txt --upgrade --find-links $PYTORCH_URL
-
-    - name: Freeze Numpy (hotfix)
-      if: matrix.requires == 'latest'
-      run: |
-        pip install -q "numpy==1.21.0" --only-binary :all: # temp fix for cypesq
-        # import of PILLOW_VERSION which they recently removed in v9.0 in favor of __version__
-        pip install -q "Pillow<9.0"  # It messes with torchvision
 
     - name: Install all dependencies
       run: |
