--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Freeze Numpy (hotfix)
       if: matrix.requires == 'latest'
       run: |
-        pip install -q "numpy==1.21.0" # temp fix for cypesq
+        pip install -q "numpy==1.21.*" # temp fix for cypesq
         # import of PILLOW_VERSION which they recently removed in v9.0 in favor of __version__
         pip install -q "Pillow<9.0"  # It messes with torchvision
 
