--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -70,10 +70,14 @@ jobs:
         requires: ${{ matrix.requires }}
         python-version: ${{ matrix.python-version }}
 
+    - name: Freeze NumPY (hotfix)
+      if: matrix.requires == 'latest'
+      # ImportError: Numba needs NumPy 1.21 or less
+      run: pip install -q "numpy==1.21.*"
+
     - name: Freeze PIL (hotfix)
-      run: |
-        # import of PILLOW_VERSION which they recently removed in v9.0 in favor of __version__
-        pip install -q "Pillow<9.0"  # It messes with torchvision
+      # import of PILLOW_VERSION which they recently removed in v9.0 in favor of __version__
+      run: pip install -q "Pillow<9.0"  # It messes with torchvision
 
     - name: Install base dependencies
       run: |
