--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -71,15 +71,15 @@ jobs:
         requires: ${{ matrix.requires }}
         python-version: ${{ matrix.python-version }}
 
-    - name: Freeze Numba/PIL (hotfix)
+    - name: Freeze PIL (hotfix)
       run: |
         # import of PILLOW_VERSION which they recently removed in v9.0 in favor of __version__
         pip install -q "Pillow<9.0"  # It messes with torchvision
         # ImportError: Numba needs NumPy 1.21 or less
-        if [[ ${{ matrix.python-version }} == '3.10' ]]; then
-          pip install -U "numpy==1.20.*" --no-cache-dir --no-binary :all:
-        fi
-        echo "PIP_NUMPY=numpy==1.20.*" >> $GITHUB_ENV
+        #if [[ ${{ matrix.python-version }} == '3.10' ]]; then
+        #  pip install -U "numpy==1.20.*" --no-cache-dir --no-binary :all:
+        #fi
+        #echo "PIP_NUMPY=numpy==1.20.*" >> $GITHUB_ENV
 
     - name: Install base dependencies
       run: |
